force-app/main/default/objects/Announcement__c/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <description>Key takeaways for this announcement</description>
    <inlineHelpText>Key takeaways for this announcement</inlineHelpText>
    <label>Highlights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>