force-app/main/default/objects/Announcement__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this announcement will remain at the top of bulletin boards</description>
    <inlineHelpText>If checked, this announcement will remain at the top of bulletin boards</inlineHelpText>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>