force-app/main/default/objects/Announcement__c/fields/Priority_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Priority_End_Date_Time__c</fullName>
    <description>If set, the priority flag will be ignored after this date/time has passed</description>
    <inlineHelpText>If set, the priority flag will be ignored after this date/time has passed</inlineHelpText>
    <label>Priority End Date/Time</label>
    <type>DateTime</type>
</CustomField>